it looks as though I have finally solved the text shifting around with hovers,  it turns out tha a:hover tag in global applies to the button? also solved some hard to track down elements causing items to not be well aligned or placed correctly in relation to eachother. ==ej==

--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,6 @@
   text-align: center;
 }
 
-.App a {
-  color: #E0FFFF;
-  margin: 8px;
-  padding: 8px;
-  margin-right: 38px;
-  /* font-size: min(6vw); */
-}
-
-.App a:hover {
-  color: #33FF29;
-  /* font-size: min(8vw); */
-  /* margin: 0px;
-  padding: 0px; */
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
